--- a/content/00.front-matter.md
+++ b/content/00.front-matter.md
@@ -41,4 +41,4 @@ on {{manubot.date}}.
 
 <sup>†</sup> To whom correspondence should be addressed:
 
-<sup>\*</sup> This is a draft of the eventual final manuscript, and should therefore be treated as such. Conclusions, along with author order and contributions, may change as the manuscript is finalized.
+<sup>\*</sup> This is a draft of the eventual final manuscript and should therefore be treated as such. Conclusions, along with author order and contributions, may change as the manuscript is finalized.
