--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -60,7 +60,7 @@ Compartments are derived from Reactome annotations. Compartment visualizations a
 Annotations for each reaction are derived from the Reactome database. Pseudo-reactions annotations do not include this information; instead they include notes on which reactions were collapsed to create the selected pseudo-reaction. All inferred pseudo-reactions and protein or complex values are displayed with dashed edges to differentiation from measured values.
 
 #### 7.6 Additional features
-While Metaboverse will continue to undergo development and new features will be added, we will briefly highlight some additional features available at time of publication. We encourage users to check the documentation for more current updates and information regarding use of Metaboverse [docs].
+While Metaboverse will continue to undergo development and new features will be added, we will briefly highlight some additional features available at time of publication. We encourage users to check the documentation for more current updates and information regarding use of Metaboverse [@url:https://metaboverse.readthedocs.io/en/latest].
 
 ##### 7.6a Toggle genes
 As gene components can crowd the graph space, users can toggle gene display on and off using the appropriate button. The graph is then refreshed to either include or ignore gene components based on their node meta-tag.
